--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../genindex.html"><link rel="search" title="Search" href="../search.html">
 
     <!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 -->
-        <title>Overview: module code - PyEventEngine v0.4.3.post1</title>
+        <title>Overview: module code - PyEventEngine v{__version__}</title>
       <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=d111a655" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css?v=580074bf" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css?v=8dab3a3b" />
@@ -160,7 +160,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../index.html"><div class="brand">PyEventEngine v0.4.3.post1</div></a>
+      <a href="../index.html"><div class="brand">PyEventEngine v{__version__}</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -181,7 +181,7 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../index.html">
   
-  <span class="sidebar-brand-text">PyEventEngine v0.4.3.post1</span>
+  <span class="sidebar-brand-text">PyEventEngine v{__version__}</span>
   
 </a><form class="sidebar-search-container" method="get" action="../search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -235,6 +235,7 @@
 <ul><li><a href="event_engine/capi/c_engine.html">event_engine.capi.c_engine</a></li>
 <li><a href="event_engine/capi/c_event.html">event_engine.capi.c_event</a></li>
 <li><a href="event_engine/capi/c_topic.html">event_engine.capi.c_topic</a></li>
+<li><a href="event_engine/capi/fallback_engine.html">event_engine.capi.fallback_engine</a></li>
 <li><a href="event_engine/native/engine.html">event_engine.native.engine</a></li>
 <li><a href="event_engine/native/event.html">event_engine.native.event</a></li>
 <li><a href="event_engine/native/topic.html">event_engine.native.topic</a></li>
@@ -270,7 +271,7 @@
       
     </aside>
   </div>
-</div><script src="../_static/documentation_options.js?v=06a2b343"></script>
+</div><script src="../_static/documentation_options.js?v=bc20d456"></script>
     <script src="../_static/doctools.js?v=9bcbadda"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../_static/scripts/furo.js?v=46bd48cc"></script>
