--- a/native_fallback.html
+++ b/native_fallback.html
@@ -6,7 +6,7 @@
 <link rel="index" title="Index" href="genindex.html"><link rel="search" title="Search" href="search.html"><link rel="next" title="API Reference" href="api_reference.html"><link rel="prev" title="Python API Reference (CAPI)" href="capi_python.html">
 
     <!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 -->
-        <title>Native Python Fallback - PyEventEngine v{__version__}</title>
+        <title>Native Python Fallback - PyEventEngine v0.4.4</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=d111a655" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=580074bf" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=8dab3a3b" />
@@ -161,7 +161,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">PyEventEngine v{__version__}</div></a>
+      <a href="index.html"><div class="brand">PyEventEngine v0.4.4</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -182,7 +182,7 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
-  <span class="sidebar-brand-text">PyEventEngine v{__version__}</span>
+  <span class="sidebar-brand-text">PyEventEngine v0.4.4</span>
   
 </a><form class="sidebar-search-container" method="get" action="search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -410,7 +410,7 @@ python demo/native_performance_test.py</p>
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=bc20d456"></script>
+</div><script src="_static/documentation_options.js?v=bc066b69"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=46bd48cc"></script>
