Deploy documentation for main ad1c1f4931831b4ead74fa536e4e6342eb7aab8e

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -232,6 +232,7 @@
         </div>
         <article role="main" id="furo-main-content">
           <h1>All modules for which code is available</h1>
+<ul><li><a href="event_engine.html">event_engine</a></li>
 <ul><li><a href="event_engine/capi/c_engine.html">event_engine.capi.c_engine</a></li>
 <li><a href="event_engine/capi/c_event.html">event_engine.capi.c_event</a></li>
 <li><a href="event_engine/capi/c_topic.html">event_engine.capi.c_topic</a></li>
@@ -239,7 +240,7 @@
 <li><a href="event_engine/native/engine.html">event_engine.native.engine</a></li>
 <li><a href="event_engine/native/event.html">event_engine.native.event</a></li>
 <li><a href="event_engine/native/topic.html">event_engine.native.topic</a></li>
-</ul>
+</ul></ul>
         </article>
       </div>
       <footer>
