--- a/genindex.html
+++ b/genindex.html
@@ -498,6 +498,13 @@
 </li>
         </ul></li>
         <li>
+    event_engine
+
+        <ul>
+          <li><a href="api_reference.html#module-event_engine">module</a>
+</li>
+        </ul></li>
+        <li>
     event_engine.capi.c_engine
 
         <ul>
@@ -539,6 +546,8 @@
           <li><a href="api_reference.html#module-event_engine.native.event">module</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     event_engine.native.topic
 
@@ -546,8 +555,6 @@
           <li><a href="api_reference.html#module-event_engine.native.topic">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api_reference.html#event_engine.capi.c_engine.EventEngine.event_hooks">event_hooks() (event_engine.capi.c_engine.EventEngine method)</a>
 
         <ul>
@@ -652,6 +659,8 @@
           <li><a href="api_reference.html#event_engine.native.engine.EventEngine.get">(event_engine.native.engine.EventEngine method)</a>
 </li>
         </ul></li>
+        <li><a href="api_reference.html#event_engine.get_include">get_include() (in module event_engine)</a>
+</li>
         <li><a href="api_reference.html#event_engine.capi.c_topic.get_internal_map">get_internal_map() (in module event_engine.capi.c_topic)</a>
 
         <ul>
@@ -840,6 +849,8 @@
     module
 
         <ul>
+          <li><a href="api_reference.html#module-event_engine">event_engine</a>
+</li>
           <li><a href="api_reference.html#module-event_engine.capi.c_engine">event_engine.capi.c_engine</a>
 </li>
           <li><a href="api_reference.html#module-event_engine.capi.c_event">event_engine.capi.c_event</a>
