--- a/genindex.html
+++ b/genindex.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#"><link rel="search" title="Search" href="search.html">
 
-    <!-- Generated with Sphinx 9.1.0 and Furo 2025.12.19 --><title>Index - PyEventEngine v0.4.6</title>
+    <!-- Generated with Sphinx 9.1.0 and Furo 2025.12.19 --><title>Index - PyEventEngine v0.4.6.post1</title>
 <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=d111a655" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=7bdb33bb" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=8dab3a3b" />
@@ -159,7 +159,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">PyEventEngine v0.4.6</div></a>
+      <a href="index.html"><div class="brand">PyEventEngine v0.4.6.post1</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -180,7 +180,7 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
-  <span class="sidebar-brand-text">PyEventEngine v0.4.6</span>
+  <span class="sidebar-brand-text">PyEventEngine v0.4.6.post1</span>
   
 </a><form class="sidebar-search-container" method="get" action="search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -643,6 +643,8 @@
           <li><a href="api_reference.html#event_engine.native.engine.EventEngine.get">(event_engine.native.engine.EventEngine method)</a>
 </li>
         </ul></li>
+        <li><a href="api_reference.html#event_engine.capi.c_engine.EventEngine.get_hook">get_hook() (event_engine.capi.c_engine.EventEngine method)</a>
+</li>
         <li><a href="api_reference.html#event_engine.get_include">get_include() (in module event_engine)</a>
 </li>
     </ul></td>
@@ -1242,7 +1244,7 @@
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=35f785e4"></script>
+</div><script src="_static/documentation_options.js?v=89797f72"></script>
     <script src="_static/doctools.js?v=fd6eb6e6"></script>
     <script src="_static/sphinx_highlight.js?v=6ffebe34"></script>
     <script src="_static/scripts/furo.js?v=46bd48cc"></script>
